# accel-endianess

./: CMakeLists.txt
include/accel/: endianess  endianness
inspections/: CMakeLists.txt  endianness.c
tests/: CMakeLists.txt  endianess-tests.cpp  endianness-tests.cpp
